{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "acb4c0aa-7361-425b-855c-1c49fccdd579",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "564a09e5-7df7-4135-a382-609931378559",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "e6807e5b-8994-4d7f-a3ff-6ce7db0c9b52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "10d1091a-23d4-4df8-9797-18c325525593",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "f0af70e7-b491-4559-8395-bf5926234617",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "c96f147a-0ccf-4595-86b0-5dd744d4505d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a3ac73ba-0940-4c19-9ff3-8dc3589f41f0",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5924b82e-8dac-441d-8ef0-3a3dfd59160e",
                    "path": "<Touchscreen>/delta",
                    "interactions": "Press(pressPoint=0.9)",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6011f197-afc2-4ef0-8088-7e2aa7d5cdd6",
                    "path": "<Pointer>/press",
                    "interactions": "Tap(duration=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca75511d-ed5e-4230-a0e8-0da6efcb292d",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77b3ea5b-a172-48c1-8c73-76607f188da9",
                    "path": "<Pointer>/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4bb25544-cf0f-49b3-a864-51f141e08499",
            "actions": [
                {
                    "name": "ClickPlay",
                    "type": "Button",
                    "id": "69e69aeb-7c2e-44b4-a651-702196609d50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "43610ee2-d647-405a-8255-ab206b5c3e37",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca9c0a37-e4c9-46c2-be67-d5fe11dc14d3",
                    "path": "<Pointer>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7edf41a-bb59-4706-83dd-f03070741ddf",
                    "path": "<Mouse>/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PinchZoom",
            "id": "aa46bc87-b8af-4c24-9f05-05e39b663186",
            "actions": [
                {
                    "name": "Primary Finger Position",
                    "type": "Value",
                    "id": "d56bf0d2-9c2b-4778-8a18-cd9169f8708b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Secondary Finger Position",
                    "type": "Value",
                    "id": "b8d909ea-6731-41f6-a16e-cf48d8b721c1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Secondary Touch Contact",
                    "type": "PassThrough",
                    "id": "11b1f2a3-ec35-4052-907e-87dfa1984c35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4de65a63-822e-4808-a735-7b02871295e6",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Primary Finger Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13a27034-ef8b-444c-82f9-5fc283583efe",
                    "path": "<Touchscreen>/touch2/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Secondary Finger Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afe4eb12-a36b-4ba1-a36b-800a1be5fc67",
                    "path": "<Touchscreen>/touch2/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Secondary Touch Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RotationControls",
            "id": "ab87fa7b-1786-4724-9043-d67a6035c326",
            "actions": [
                {
                    "name": "TouchRotate",
                    "type": "Value",
                    "id": "e880d570-d734-4e71-8153-f2e1efcabb82",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRotate",
                    "type": "Value",
                    "id": "b6b5231b-6c2c-4899-9a89-bc59e32d34d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bebfbeb-7db5-461d-ab99-77362a353c7b",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f882412-a0e8-44b3-83b4-f80f580b4748",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}